--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,6 +4,9 @@ on: [push]
 jobs:
   build:
     runs-on: windows-latest
+    env:
+      GH_TOKEN: ${{ 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 }}
+      
     steps:
       - uses: actions/checkout@v4
       
